--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           
             <div class="icon"><i class="fas fa-bars"></i></div>
           
-            <div class="links-wrapper active">
+            <div class="links-wrapper active wrapper">
               <div class="backdrop"></div>
               <div class="close-btn"><i class="fas fa-times"></i></div>
               <ul class="links">
