--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SGI-Guichard</title>
+    <title>SGI Guichard</title>
     <link rel="icon" href="img/logo-SGI.png" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/41fbbded63.js"></script>
@@ -13,9 +13,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
+
 <body>
   <header>
-    <a href="#"><img src="img/sgi.png" alt="logo-SGI" class="logo"></a>
+      <a href="#"><img src="img/sgi.png" alt="logo-SGI" class="logo"></a>
     <button class="ham"></button>
   <nav class="navbar">
     <ul class="links">
@@ -37,13 +38,20 @@
           <img src="img/CBE-techniques-des-voussoirs-1.jpg" alt="" class="img-about">
         </div>
         <div class="title-and-text-div">
-          <h2 class="title-about">SGI - GUICHARD</h2>
-          <p class="text-about">Fondée en 1980 par Alain Guichard, SGI - GUICHARD est une société de d'ingénierie spécialisée dans la gestion de l'énergie, en particulier l'énergie thermique. Nos compétences vont du conseil à la gestion de chantiers.</p> 
+          <h3 class="title-about">SGI - GUICHARD</h3>
+          <p class="text-about">Fondée en 1980 par Alain Guichard, SGI - GUICHARD est une société de d'ingénierie spécialisée dans la gestion de l'énergie, en particulier l'énergie thermique. Nos compétences vont du simple conseil à la gestion de chantiers.</p> 
 
-          <p class="text-about">En 1986, SGI - GUICHARD participe activement à la construction du tunnel sous la manche; en sous-traitance du consortium TML (Transmanche Link) pour la thermomaturation des voussoirs dans des tunnels spécialisés.</p>
+          <p class="text-about">En 1986, SGI - GUICHARD participe activement à la construction du tunnel sous la manche en sous-­‐traitance du consortium TML (Transmanche Link) pour la thermomaturation des voussoirs dans des tunnels spécialisés.</p>
 
-          <p class="text-about">En parallèle de la thermomaturation SGI - GUICHARD développe depuis 2010 sa branche "rénovation et travaux". Nous intervenons à différentes échelles, de la rénovation d'un studio à celle d'un immeuble.</p>
-
+          <p class="text-about">En parallèle de la thermomaturation SGI-GUICHARD développe depuis 2010 sa branche "rénovation et travaux". Nous intervenons à différentes échelles, que se soit de la rénovation d'un studio à celle d'un immeuble.</p>
+        </div>
+        
+      
+        <div class="bim-part">
+                <img src="img/BIM.jpg" alt="" class="img-bim">
+              <div class="text-bim">
+                <p class="text-about">Nous tenons à informer nos chers client que nous sommes équipé de la technologie laser BIM</p>
+              </div>
         </div>
       </div>
   </section>
