--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
       
         <div class="bim-part">
-                <img src="img/BIM.jpg" alt="" class="img-bim">
+                <img src="img/bim.jpg" alt="" class="img-bim">
               <div class="text-bim">
                 <p class="text-about">Nous tenons à informer nos chers client que nous sommes équipé de la technologie laser BIM</p>
               </div>
