--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="bim-part">
                 <img src="img/BIM.jpg" alt="" class="img-bim">
               <div class="text-bim">
-                <p class="text-about">Nous tenons à informer nos chers client que nous sommes équipé de la technologie laser BIM</p>
+                <p class="text-bim">Nous tenons à informer nos chers client que nous sommes équipé de la technologie laser BIM</p>
               </div>
         </div>
       </div>
