--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="bim-part">
                 <img src="img/BIM.jpg" alt="" class="img-bim">
               <div class="text-bim">
-                <p class="text-bim">Nous sommes équipé de la technologie laser BIM</p>
+                <p class="text-bim">* Nous sommes équipé de la technologie laser BIM</p>
               </div>
         </div>
         </div>
