--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h3 class="title-about">SGI - GUICHARD</h3>
           <p class="text-about">Fondée en 1980 par Alain Guichard, SGI - GUICHARD est une société de d'ingénierie spécialisée dans la gestion de l'énergie, en particulier l'énergie thermique. Nos compétences vont du simple conseil à la gestion de chantiers.</p> 
 
-          <p class="text-about">En 1986, SGI - GUICHARD participe activement à la construction du tunnel sous la manche en sous-­‐traitance du consortium TML (Transmanche Link) pour la thermomaturation des voussoirs dans des tunnels spécialisés.</p>
+          <p class="text-about">En 1986, SGI - GUICHARD participe activement à la construction du tunnel sous la manche en sous-traitance du consortium TML (Transmanche Link) pour la thermomaturation des voussoirs dans des tunnels spécialisés.</p>
 
           <p class="text-about">En parallèle de la thermomaturation SGI-GUICHARD développe depuis 2010 sa branche "rénovation et travaux". Nous intervenons à différentes échelles, que se soit de la rénovation d'un studio à celle d'un immeuble.</p>
           </div>
