--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SGI Guichard</title>
+    <title>SGI-Guichard</title>
     <link rel="icon" href="img/logo-SGI.png" />
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/41fbbded63.js"></script>
@@ -28,7 +28,7 @@
   </header>
 
   <section class="welcome-section">
-      <h1>Bienvenue sur<span class="company"> SGI - GUICHARD</span></h1>
+      <h1>Bienvenue sur<span class="company"> SGI-GUICHARD</span></h1>
     
   </section>
   
@@ -45,9 +45,9 @@
         </div>
         <div class="title-and-text-div">
           <h3 class="title-about">SGI - GUICHARD</h3>
-          <p class="text-about">Fondée en 1980 par Alain Guichard, SGI - GUICHARD est une société de d'ingénierie spécialisée dans la gestion de l'énergie, en particulier l'énergie thermique. Nos compétences vont du simple conseil à la gestion de chantiers.</p> 
+          <p class="text-about">Fondée en 1980 par Alain Guichard, SGI-GUICHARD est une société de d'ingénierie spécialisée dans la gestion de l'énergie, en particulier l'énergie thermique. Nos compétences vont du simple conseil à la gestion de chantiers.</p> 
 
-          <p class="text-about">En 1986, SGI - GUICHARD participe activement à la construction du tunnel sous la manche en sous-traitance du consortium TML (Transmanche Link) pour la thermomaturation des voussoirs dans des tunnels spécialisés.</p>
+          <p class="text-about">En 1986, SGI-GUICHARD participe activement à la construction du tunnel sous la manche en sous-traitance du consortium TML (Transmanche Link) pour la thermomaturation des voussoirs dans des tunnels spécialisés.</p>
 
           <p class="text-about">En parallèle de la thermomaturation SGI-GUICHARD développe depuis 2010 sa branche "rénovation et travaux". Nous intervenons à différentes échelles, que se soit de la rénovation d'un studio à celle d'un immeuble.</p>
           </div>
@@ -89,7 +89,7 @@
         Siège social: 3 rue monge, 75008 Paris
       </p>
       <p class="rights">
-        Tous droits réservés <span class="company">SGI - Guichard</span> &copy; <span class="year"></span>
+        Tous droits réservés <span class="company">SGI-Guichard</span> &copy; <span class="year"></span>
       </p>
   </footer>
       
