--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SGI - Guichard</title>
     <link rel="icon" href="img/logo-SGI.png" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/41fbbded63.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
@@ -27,10 +28,16 @@
   </nav>
   </header>
 
-  <section class="welcome-section">
-      <h1>Bienvenue sur<span class="company"> SGI-GUICHARD</span></h1>
-    
+  <section class="maintenance">
+    <div class="maintenance-div">
+      <p id="maintenance-line">site en maintenance</p>
+    </div>
+    <button class="maintenance-close"><i class="fas fa-times"></i></button>
   </section>
+
+<section class="welcome-section">
+    <h1>Bienvenue sur<span class="company"> SGI-GUICHARD</span></h1>
+</section>
   
   <section id="abt-section" class="about-section">
       <div class="about-flex">
