text-bim modifications

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <img src="img/CBE-techniques-des-voussoirs-1.jpg" alt="" class="img-about">
           <div class="bim-part">
                 <img src="img/BIM.jpg" alt="" class="img-bim">
-              <div class="text-bim">
-                <p class="text-bim">* Nous sommes équipé de la technologie laser BIM</p>
+              <div class="text-bim-div">
+                <p class="text-bim">* Nous vous proposons une estimation rapide du coût de votre chantier grâce aux nouvelles technologies de modélisations 3D</p>
               </div>
         </div>
         </div>
